2014-23-09 - Version 1.0.0
* Default value for cron_minute changed from */1 to */10
* New README layout

2014-03-09 - Version 0.9.7
* Add manage_repo_dirs parameter

2014-02-09 - Version 0.9.6
* Add timeout parameter for execs (#9)
* Add groupfile support
* Even more tests
* metadata.json with tested OS compatibility data

2014-18-05 - Version 0.9.5
* Allow suppressing of output from cronjob (#8)
* Repository update script for each repo
* Converted rspec-system tests to beaker
* Major refactoring of rspec tests

2013-17-12 - Version 0.9.4
* Repo update cronjob made optional (Vlastimil Holer)
* changelog_limit made optional (Vlastimil Holer)
* Rudimentary Debian support (Aaron Hicks)